<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_view_meetings"
    android:name="com.artus.mareu.ui.meetings_list.MeetingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutManager="LinearLayoutManager"
    tools:context="com.artus.mareu.ui.meetings_list.MeetingsFragment"
    tools:listitem="@layout/itemview_meeting"
    android:backgroundTint="@color/colorClearGrey"
    >

</androidx.recyclerview.widget.RecyclerView>